@@ -32,7 +32,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-
+    // JAXB API
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
+    // JAXB 구현체
+    implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.1'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
@@ -42,6 +45,12 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+}
+tasks.withType(JavaExec) {
+	jvmArgs += [
+			'--add-modules', 'java.xml.bind',
+			'--add-exports', 'java.xml.bind/com.sun.xml.internal.bind.v2.runtime=ALL-UNNAMED'
+	]
 }
 
 
